--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,5 @@ commands:
     permission: litecoin.commands.bal
     aliases:
       - balance
+  setbal:
+    permission: litecoin.commands.setbal
