Add settings file

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,5 @@ commands:
       - balance
   setbal:
     permission: litecoin.commands.setbal
+  gamble:
+    permission: litecoin.commands.gamble
